[package]
name = "mound"
version = "1.0.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
clap = { version = "4.5.18", features = ["derive"] }
csv = "1.3.0"
fxhash = "0.2.1"
linfa = "0.7.0"
linfa-linear = "0.7.0"
ndarray = "0.15.0"
ndarray-csv = "0.5.2"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = { version = "3.9.0", features = ["hex"] }
sha2 = "0.10.8"
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
