[package]
name = "mound"
version = "1.0.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
fxhash = "0.2"
linfa = "0.7"
linfa-linear = "0.7"
ndarray = "0.15"
ndarray-csv = "0.5"
opentelemetry = "0.25"
opentelemetry-otlp = "0.25"
opentelemetry-stdout = "0.25"
opentelemetry_sdk = "0.25"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["hex"] }
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-opentelemetry = "0.26"
tracing-subscriber = "0.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
